Fix a clipping issue with the larger viewport

--- a/playground/css/playground.css
+++ b/playground/css/playground.css
@@ -62,6 +62,7 @@ header h1 {
     min-height: 23em;
     overflow: hidden;
     position: relative;
+    height: 100%;
 }
 
 #rendering-options-menu, #rendering-options-top {
